# vm4a

./: .gitignore  AGENT.md  CHANGELOG.md  Cookbook.md  Cookbook.zh-CN.md  Developer.md  Developer.zh-CN.md  Package.resolved  Package.swift  README.md  README.zh-CN.md  Usage.md  Usage.zh-CN.md  action.yml  deploy.sh  inc_major_version.sh  inc_minor_version.sh  inc_patch_version.sh
.github/workflows/: templates.yml  test.yml
EasyVM/EasyVM.xcodeproj/: project.pbxproj
Sources/EasyVMCLI/: EasyVMCLI.entitlements  EasyVMCLI.swift  main.swift
Sources/EasyVMCore/: Core.swift  GuestAgent.swift  OCI.swift
Sources/EasyVMGuest/: EasyVMGuestMain.swift
Sources/VM4ACLI/: AgentCommands.swift  ClusterCommand.swift  MCPCommand.swift  PoolCommand.swift  ServeCommand.swift  SessionCommand.swift  SnapshotCommand.swift  VM4ACLI.swift
Sources/VM4ACore/: Agent.swift  AgentCore.swift  Cluster.swift  Core.swift  Egress.swift  GuestAgent.swift  HTTPServer.swift  ImageResolver.swift  MCPServer.swift  MacOSInstall.swift  Networking.swift  OCI.swift  Sessions.swift
Sources/VM4AGuest/: VM4AGuestMain.swift
Sources/VM4ASessions/: TimeMachineView.swift  (+1 more)
UseCases/: README.md  README.zh-CN.md  golden-image-with-parallel-forks.md  golden-image-with-parallel-forks.zh-CN.md
docs/: Gemfile  README.md  _config.yml  cookbook.md  getting-started.md  index.md  troubleshooting.md
scripts/: bench.sh  prepare_mas.sh  release_homebrew_tap.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: agent_loop.py
sdk/python/src/vm4a/: __init__.py  client.py
templates/: README.md
(+130 files in other folders)
