[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vm4a"
version = "2.0.0"
description = "Python client for vm4a's HTTP API — Apple Silicon VMs as agent sandboxes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "everettjf" }]
keywords = ["vm4a", "ai-agent", "vm", "macos", "apple-silicon", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/everettjf/vm4a"
Issues = "https://github.com/everettjf/vm4a/issues"

[tool.setuptools.packages.find]
where = ["src"]
